fixed bad designs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <body>
+  <body class="d relative" >
+    <div id="toast-root" class="absolute w-full flex items-center justify-center" ></div>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
